--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="{{ url_for('booking.list') }}">
+                            <a class="nav-link" href="{{ url_for('booking.list_bookings') }}">
                                 <i class="fas fa-list me-1"></i>Schedule
                             </a>
                         </li>
