--- a/app/static/css/aviation.css
+++ b/app/static/css/aviation.css
@@ -241,7 +241,7 @@ body {
 .aircraft-image {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .aircraft-info {
