--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -27,7 +27,7 @@
                         <a class="nav-link" href="{{ url_for('admin.aircraft') }}">Aircraft</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('admin.schedule') }}">Bookings</a>
+                        <a class="nav-link" href="{{ url_for('admin.bookings') }}">Bookings</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('admin.maintenance_records') }}">Maintenance</a>
